--- a/Day 2/package.json
+++ b/Day 2/package.json
@@ -4,5 +4,17 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
+  "name": "day-2",
+  "version": "1.0.0",
+  "main": "L1.js",
+  "type": "module",
+  "scripts": {
+
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
