--- a/Day4/backend/package.json
+++ b/Day4/backend/package.json
@@ -6,6 +6,10 @@
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2"
   },
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
