--- a/Day4/backend/package.json
+++ b/Day4/backend/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'Build completed'"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
